--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "pg": "^8.8.0",
-    "pg-native": "^3.0.1"
+    "pg-native": "^3.0.1",
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
